--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,23 @@
 
+[project]
+name="QoreWidgets"
+version="0.1.0"
+description = "Yet another collection of those core widgets for a modern application."
+
+authors = [
+    { name="Dylan", email="du33169@gmail.com" }
+]
+license = { file="LICENSE" }
+readme = "README.md"
+requires-python = ">=3.6"
+dependencies = [
+]
+[project.optional-dependencies]
+pyside6 = [
+    "PySide6",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/du33169/QoreWidgets"
+"Bug Tracker" = "https://github.com/du33169/QoreWidgets/issues"
+
