--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ name: Build Python Package
 
 on:
   push:
-    branches: [ main ]
+    # branches: [ main ]
     tags: ['*']
   workflow_dispatch:
 
@@ -38,7 +38,7 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     environment:
       name: pypi
-      url: https://pypi.org/p/<your-pypi-project-name>
+      url: https://pypi.org/p/QoreWidgets
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
