--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ name: Build Python Package
 
 on:
   push:
-    # branches: [ main ]
+    branches: [ main ]
     tags: ['*']
   workflow_dispatch:
 
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # fetch all history for all tags and branches, so we can get the correct version number
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -51,3 +53,28 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         print-hash: true
+        verbose: true
+
+  # job to upload the package to TestPyPI
+  upload-to-testpypi:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && !startsWith(github.ref, 'refs/tags') 
+      # if the push is not a tag, then upload to testpypi
+    environment:
+      name: testpypi
+      url: https://test.pypi.org/p/QoreWidgets
+    permissions:
+      id-token: write
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: dist
+        path: dist
+
+    - name: Publish package distributions to TestPyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository-url: https://test.pypi.org/legacy/
+        print-hash: true
+        verbose: true
