--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
     authors = [
         { name="Dylan", email="du33169@gmail.com" }
     ]
-    license = { file="LICENSE" }
+    license-files = ["LICENSE"]
     readme = "README.md"
     requires-python = ">=3.8"
     dependencies = [
